fix scrollbar

--- a/compiled/simple-daggerheart-styles.css
+++ b/compiled/simple-daggerheart-styles.css
@@ -214,7 +214,7 @@
 }
 
 .simple-daggerheart .character-sheet-notes prose-mirror {
-  margin-top: 4px;
+  padding-top: 4px;
 }
 
 .simple-daggerheart.character-sheet {
