--- a/src/styles/character-sheet/_character-sheet-notes.scss
+++ b/src/styles/character-sheet/_character-sheet-notes.scss
@@ -1,5 +1,5 @@
 .simple-daggerheart .character-sheet-notes {
   prose-mirror {
-    margin-top: 4px;
+    padding-top: 4px;
   }
 }
